perf: order-statistic trees, shared value tree and owner/view index split
Reduce the memory footprint and per-mutation cost of the attribute indexes by
replacing flat prefix-sum arrays and duplicated value maps with count-augmented
B+ trees and a single shared value->ValueToRecord tree projected by the filter,
sort and unique indexes.

- add CumulativeWeightBPlusTree, an order-statistic no-merge B+ tree, and back
  SortIndexChanges with it, replacing the O(V) ValueStartIndex[] prefix-sum array
- keep UnorderedLookupTree balanced via internal-only steal/merge (equal depth,
  zero order-key reassignment) guarded by a consistency report
- split FilterIndex/SortIndex/UniqueIndex into abstract-sealed Owner/View pairs
  over the shared InvertedIndex tree, fold foldable unique indexes onto it with
  uniqueness enforced at the filter write, and drop the isView() flag
- back the producer sub-index maps with PersistentTransactionalProducerMap for
  O(delta*logN) structure-sharing commits
- add the v5->v6 storage migration (Migration_2026_2): NFD filter re-key and slim
  unique/sort storage parts, with read-only 2026.1 serializers for old catalogs
- add unit and generational long-running coverage for the new structures

Ref: #760